--- a/.buildomatic.yml
+++ b/.buildomatic.yml
@@ -2,7 +2,7 @@ stages:
   - name: stunning-parakeet
     dockerfile: Dockerfile
     push: false
-    run: false
+    run: true
     tagType: tag
     environments:
       - production
